--- a/config.json
+++ b/config.json
@@ -1,17 +1,47 @@
 {
-    "pools": [{
-            "name": "USW-VIPOR",
-            "url": "stratum+tcp://usw.vipor.net:5040",
-            "timeout": 10,
+    "pools":
+        [{
+            "name": "US-VIPOR",
+            "url": "stratum+tcp://us.vipor.net:5040",
+            "timeout": 180,
+            "disabled": 0
+        },
+        {
+            "name": "USSE-VIPOR",
+            "url": "stratum+tcp://usse.vipor.net:5040",
+            "timeout": 180,
             "disabled": 0
         },
         {
             "name": "NA-LUCKPOOL",
             "url": "stratum+tcp://na.luckpool.net:3960",
-            "timeout": 10,
+            "timeout": 180,
+            "disabled": 0
+        },
+        {
+            "name": "AIH-LOW",
+            "url": "stratum+tcp://verus.aninterestinghole.xyz:9998",
+            "timeout": 180,
             "disabled": 1
-        }
-    ],
+        },
+        {
+            "name": "WW-ZERGPOOL",
+            "url": "stratum+tcp://verushash.mine.zergpool.com:3300",
+            "timeout": 180,
+            "disabled": 1
+        },
+        {
+            "name": "VPOOL-LOW",
+            "url": "stratum+tcp://pool.verus.io:9998",
+            "timeout": 180,
+            "disabled": 1
+        },
+        {
+            "name": "US-CLOUDIKO",
+            "url": "stratum+tcp://us.cloudiko.io:9999",
+            "timeout": 180,
+            "disabled": 1
+        }],
     "user": "RQaWTAGYudd2sPnXy9vqVj8qd7VXLRP5ep",
     "pass": "",
     "algo": "verus",
